fixed too small height of .w50 class

--- a/basic.css
+++ b/basic.css
@@ -392,7 +392,7 @@ pre,
 
 .w50 {
   float: left;
-  height: 5rem;
+  height: 6.25rem;
   width: 50%; }
   .w50 .tl_help {
     margin-right: 1.5rem; }
